@@ -1,158 +1,4 @@
-CAT.glnx86 filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_3dVol2Surf filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_AddValuesToSurf filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_AverageSurfaces filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_BlurSurfHK filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_Central2Pial filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_DeformSurf filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_DumpCurv filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_DumpSurfArea filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_DumpSurfaceRatio filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_FixTopology filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_FractalDimension filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_Hausdorff filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_Isometize filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_MarchingCubesGenus0 filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_MarkDefects filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_RefineMesh filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_ResampleSphericalSurf filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_ResampleSphericalSurfSPH filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_ResampleSurf filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_SelfIntersect filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_SeparatePolygon filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_SmoothConvexity filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_SulcusDepth filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_Surf2Sphere filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_Surf2Vol filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_SurfDistance filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86/CAT_WarpSurf filter=lfs diff=lfs merge=lfs -text
-CAT.maca64 filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_3dVol2Surf filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_AddValuesToSurf filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_AverageSurfaces filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_BlurSurfHK filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_Central2Pial filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_DeformSurf filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_DumpCurv filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_DumpSurfArea filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_DumpSurfaceRatio filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_FixTopology filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_FractalDimension filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_Hausdorff filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_Isometize filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_MarchingCubesGenus0 filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_MarkDefects filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_RefineMesh filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_ResampleSphericalSurf filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_ResampleSphericalSurfSPH filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_ResampleSurf filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_SelfIntersect filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_SeparatePolygon filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_SmoothConvexity filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_SulcusDepth filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_Surf2Sphere filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_Surf2Vol filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_SurfDistance filter=lfs diff=lfs merge=lfs -text
-CAT.maca64/CAT_WarpSurf filter=lfs diff=lfs merge=lfs -text
-CAT.maci64 filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_3dVol2Surf filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_AddValuesToSurf filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_AverageSurfaces filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_BlurSurfHK filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_Central2Pial filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_DeformSurf filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_DumpCurv filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_DumpSurfArea filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_DumpSurfaceRatio filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_FixTopology filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_FractalDimension filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_Hausdorff filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_Isometize filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_MarchingCubesGenus0 filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_MarkDefects filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_RefineMesh filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_ResampleSphericalSurf filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_ResampleSphericalSurfSPH filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_ResampleSurf filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_SelfIntersect filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_SeparatePolygon filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_SmoothConvexity filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_SulcusDepth filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_Surf2Sphere filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_Surf2Vol filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_SurfDistance filter=lfs diff=lfs merge=lfs -text
-CAT.maci64/CAT_WarpSurf filter=lfs diff=lfs merge=lfs -text
-CAT.w32 filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_3dVol2Surf.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_AddValuesToSurf.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_AverageSurfaces.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_BlurSurfHK.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_Central2Pial.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_DeformSurf.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_DumpCurv.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_DumpSurfArea.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_DumpSurfaceRatio.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_FixTopology.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_FractalDimension.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_Hausdorff.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_Isometize.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_MarchingCubesGenus0.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_MarkDefects.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_RefineMesh.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_ResampleSphericalSurf.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_ResampleSphericalSurfSPH.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_ResampleSurf.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_SelfIntersect.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_SeparatePolygon.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_SmoothConvexity.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_SulcusDepth.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_Surf2Sphere.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_Surf2Vol.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_SurfDistance.exe filter=lfs diff=lfs merge=lfs -text
-CAT.w32/CAT_WarpSurf.exe filter=lfs diff=lfs merge=lfs -text
-CAT12-Manual.pdf filter=lfs diff=lfs merge=lfs -text
 VBM12-Manual_Japanese.pdf filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/Schaefer2018_100Parcels_17Networks_order.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/Schaefer2018_200Parcels_17Networks_order.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/Schaefer2018_400Parcels_17Networks_order.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/Schaefer2018_600Parcels_17Networks_order.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/T1.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/TPM_Age11.5.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/Template_0_GS.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/Template_1_Dartel.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/Template_1_GS.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/Template_2_Dartel.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/Template_2_GS.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/Template_3_Dartel.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/Template_3_GS.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/Template_4_Dartel.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/Template_4_GS.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/Template_5_Dartel.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/Template_6_Dartel.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/Template_T1.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/Template_T1_masked.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/aal3.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/anatomy3.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/brainmask.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/brainmask_GM.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/brainmask_GMtight.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/brainmask_T1.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/cat.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/cat_1mm.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/cat_strokelesions_ATLAS303.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/cat_wmh.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/cat_wmh_miccai2017.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/cobra.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/hammers.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/ibsr.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/julichbrain.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/lpba40.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/mori.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/neuromorphometrics.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/suit.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/thalamic_nuclei.nii filter=lfs diff=lfs merge=lfs -text
-templates_MNI152NLin2009cAsym/thalamus.nii filter=lfs diff=lfs merge=lfs -text
 templates_MNI152NLin2009cAsym_1mm/Template_0_GS1mm.nii filter=lfs diff=lfs merge=lfs -text
 templates_MNI152NLin2009cAsym_1mm/Template_1_GS1mm.nii filter=lfs diff=lfs merge=lfs -text
 templates_MNI152NLin2009cAsym_1mm/Template_2_GS1mm.nii filter=lfs diff=lfs merge=lfs -text
